Fix item-card position > 오른쪽 카드의 위치 position: absolute로 위치 재조정 > TODO: content-container의 크기 및 레이아웃 재조정 예정(width값이 1296px인데 1332px로 출력 -> flex 박스 gap 조정 예정)

--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -20,6 +20,20 @@ section {
   line-height: 66px;
   max-width: 1296px;
   align-self: flex-start;
+  h1 {
+    display: flex;
+    align-items: center;
+    &:first-child {
+      .date-icon {
+        background: url(https://www.kakaocorp.com/page/calendar/light/ico_date6.gif);
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 60px;
+        height: 60px;
+        margin-right: 8px;
+      }
+    }
+  }
 }
 
 .content-container {
@@ -165,6 +179,9 @@ section {
 .third-card {
   width: 297px;
   height: 192px;
+  position: absolute;
+  top: 0;
+  right: 0;
   .num-container {
     display: flex;
     align-items: center;
@@ -195,6 +212,9 @@ section {
 .fourth-card {
   width: 297px;
   height: 420px;
+  position: absolute;
+  right: 0;
+  top: 228px;
   .card-title {
     font-size: 22px;
     line-height: 32px;
@@ -220,6 +240,9 @@ section {
 .fifth-card {
   width: 297px;
   height: 420px;
+  position: absolute;
+  left: 0;
+  top: 456px;
   .card-title {
     font-size: 22px;
     line-height: 32px;
@@ -245,6 +268,9 @@ section {
 .sixth-card {
   width: 297px;
   height: 192px;
+  position: absolute;
+  left: 0;
+  top: 912px;
   .card-title {
     font-size: 22px;
     line-height: 32px;
@@ -270,6 +296,9 @@ section {
 .seventh-card {
   width: 297px;
   height: 420px;
+  position: absolute;
+  right: 0;
+  top: 684px;
   .card-title {
     font-size: 22px;
     line-height: 32px;
@@ -295,6 +324,9 @@ section {
 .eighth-card {
   width: 297px;
   height: 192px;
+  position: absolute;
+  right: 0;
+  top: 1140px;
   .card-title {
     font-size: 22px;
     line-height: 32px;
@@ -322,12 +354,12 @@ section {
   max-width: 1296px;
   width: 1296px;
   height: 540px;
-  margin: 36px 18px;
+  margin-top: 36px;
   padding: 54px 66px 0;
   border-radius: 14px;
   font-family: KakaoBig, Apple SD Gothic Neo, Malgun Gothic, 맑은 고딕,
     sans-serif;
-  background-color: #fff;
+  background: #fff;
   text-align: center;
   box-shadow: 2px 5px 40px 0 rgba(0, 0, 0, 0.08);
   display: flex;
@@ -361,6 +393,64 @@ section {
     background-size: contain;
     width: 900px;
     height: 240px;
+  }
+}
+
+.sns-content {
+  max-width: 1296px;
+  width: 1296px;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  box-shadow: 2px 5px 40px 0 rgba(0, 0, 0, 0.08);
+  padding: 0 40px;
+  border-radius: 14px;
+  h1 {
+    font-size: 32px;
+    font-weight: 700;
+  }
+  .sns-items {
+    display: flex;
+    justify-content: space-between;
+    span {
+      width: 60px;
+      height: 60px;
+      background: #eee;
+      border-radius: 50%;
+      cursor: pointer;
+      &:nth-child(2),
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5) {
+        margin-left: 10px;
+      }
+    }
+    .kakao {
+      background: url(https://www.kakaocorp.com/page/_nuxt/img/ico_sns.2acc182.png)
+        0 0/317px no-repeat;
+    }
+    .youtube {
+      background: url(https://www.kakaocorp.com/page/_nuxt/img/ico_sns.2acc182.png)
+        0 0/317px no-repeat;
+      background-position-x: -64px;
+    }
+    .instagram {
+      background: url(https://www.kakaocorp.com/page/_nuxt/img/ico_sns.2acc182.png)
+        0 0/317px no-repeat;
+      background-position-x: -128px;
+    }
+    .facebook {
+      background: url(https://www.kakaocorp.com/page/_nuxt/img/ico_sns.2acc182.png)
+        0 0/317px no-repeat;
+      background-position-x: -192px;
+    }
+    .linkedin {
+      background: url(https://www.kakaocorp.com/page/_nuxt/img/ico_sns.2acc182.png)
+        0 0/317px no-repeat;
+      background-position-x: -256px;
+    }
   }
 }
 
